# rust-api

./: Cargo.toml  README.md  SECURITY.md
src/: config.rs  main.rs
src/auth/: jwt.rs  middleware.rs
src/dto/: auth.rs
src/emails/templates/: confirmation.html  password_reset.html
src/entities/: mod.rs  session.rs  token_blacklist.rs  user.rs
src/handlers/: auth.rs  health.rs  user.rs
src/middleware/: rate_limit.rs
src/migration/: m20241201_000001_create_token_blacklist.rs  m20241201_000002_create_user_session.rs  m20241202_000001_add_email_verification_fields.rs  mod.rs
src/routes/: mod.rs
src/services/: email_service.rs  mod.rs  token_service.rs
